--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- SIDEBAR -->
     <aside class="sidebar">
       <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
+        <img src="images/avatar.png" class="avatar" alt="José Carlos Alves">
         <div>
           <h1>Guia Interativo — GitHub</h1>
           <p>Tutorial prático (exemplo: PAP)</p>
