Sem o menu Readme

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
       </div>
 
+      <!-- MENU (sem README) -->
       <nav class="nav" id="nav">
         <a href="index.html" class="active"><span>Início</span><span class="pill">Home</span></a>
         <a href="pages/conta.html"><span>Conta & Perfil</span><span class="pill">Setup</span></a>
         <a href="pages/repo.html"><span>Criar repositório</span><span class="pill">Repo</span></a>
         <a href="pages/upload.html"><span>Upload & organização</span><span class="pill">Files</span></a>
-        <a href="pages/readme.html"><span>README</span><span class="pill">Docs</span></a>
         <a href="pages/branches-pr.html"><span>Branches & PR</span><span class="pill">Flow</span></a>
         <a href="pages/issues.html"><span>Issues</span><span class="pill">Tasks</span></a>
         <a href="pages/pages.html"><span>GitHub Pages</span><span class="pill">Site</span></a>
@@ -39,7 +39,7 @@
           <button class="btn danger" id="resetStorage">Reset progresso</button>
         </div>
         <div style="margin-top:10px; font-size:12px; color:var(--muted)">
-          Dica: este manual guarda o progresso no browser.
+          Dica: marca passos concluídos — fica guardado no browser.
         </div>
       </div>
 
@@ -49,32 +49,32 @@
     </aside>
 
     <main class="main">
-      <header class="hero" id="intro">
+      <header class="hero">
         <h2>Manual Interativo de GitHub</h2>
         <p>
-          Guia passo-a-passo para criares e organizares um repositório no GitHub,
-          usares branches e pull requests, gerir tarefas com Issues e publicar um site no GitHub Pages.
+          Guia passo-a-passo para: criar repositórios, organizar ficheiros, trabalhar com branches e pull requests,
+          gerir tarefas com Issues e publicar um site no GitHub Pages.
           <br/><br/>
-          <strong>Exemplo aplicado:</strong> organização de uma <strong>PAP</strong> (documentação + evidências + entrega).
+          <strong>Exemplo aplicado:</strong> organização de uma PAP (documentação + evidências + entrega).
         </p>
         <div class="meta">
           <span class="tag">🌐 GitHub</span>
           <span class="tag">✅ Passo a passo</span>
-          <span class="tag">🧩 Exemplos + prints</span>
+          <span class="tag">🧩 Prints e evidências</span>
           <span class="tag">🚀 Pages</span>
         </div>
       </header>
 
       <section class="section">
         <h2>Começar</h2>
-        <p class="subtitle">Escolhe um tópico. Cada página tem passos e locais para colocar prints.</p>
+        <p class="subtitle">Escolhe um tópico. Cada página tem passos e sugestões de prints.</p>
 
         <section class="grid">
           <div class="card">
             <div class="head">
               <div>
-                <h3>1) Conta & Perfil</h3>
-                <p>Criar conta, confirmar email e preparar perfil.</p>
+                <h3>Conta & Perfil</h3>
+                <p>Conta, email verificado e perfil pronto.</p>
               </div>
               <a class="pill" href="pages/conta.html">Abrir</a>
             </div>
@@ -86,8 +86,8 @@
           <div class="card">
             <div class="head">
               <div>
-                <h3>2) Criar repositório</h3>
-                <p>Nome, visibilidade, README e boas práticas.</p>
+                <h3>Criar repositório</h3>
+                <p>Nome, visibilidade, configuração inicial.</p>
               </div>
               <a class="pill" href="pages/repo.html">Abrir</a>
             </div>
@@ -99,8 +99,8 @@
           <div class="card">
             <div class="head">
               <div>
-                <h3>3) Upload & organização</h3>
-                <p>Estrutura de pastas e evidências.</p>
+                <h3>Upload & organização</h3>
+                <p>Pastas, upload e evidências.</p>
               </div>
               <a class="pill" href="pages/upload.html">Abrir</a>
             </div>
@@ -112,21 +112,8 @@
           <div class="card">
             <div class="head">
               <div>
-                <h3>4) README</h3>
-                <p>Modelo para projeto tipo PAP + links.</p>
-              </div>
-              <a class="pill" href="pages/readme.html">Abrir</a>
-            </div>
-            <div class="body">
-              <img src="images/ic_readme.png" alt="" style="max-width:72px; opacity:.9">
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="head">
-              <div>
-                <h3>5) Branches & PR</h3>
-                <p>Fluxo de trabalho com Pull Requests.</p>
+                <h3>Branches & PR</h3>
+                <p>Trabalhar em segurança e integrar mudanças.</p>
               </div>
               <a class="pill" href="pages/branches-pr.html">Abrir</a>
             </div>
@@ -138,8 +125,8 @@
           <div class="card">
             <div class="head">
               <div>
-                <h3>6) Issues</h3>
-                <p>Lista de tarefas e evidência de trabalho.</p>
+                <h3>Issues</h3>
+                <p>Tarefas e evidência de progresso.</p>
               </div>
               <a class="pill" href="pages/issues.html">Abrir</a>
             </div>
@@ -151,8 +138,8 @@
           <div class="card">
             <div class="head">
               <div>
-                <h3>7) GitHub Pages</h3>
-                <p>Publicar site a partir do repositório.</p>
+                <h3>GitHub Pages</h3>
+                <p>Publicar um site do repositório.</p>
               </div>
               <a class="pill" href="pages/pages.html">Abrir</a>
             </div>
@@ -164,8 +151,8 @@
           <div class="card">
             <div class="head">
               <div>
-                <h3>8) Downloads & links</h3>
-                <p>Ferramentas e como sacar o repo.</p>
+                <h3>Downloads & links</h3>
+                <p>Ferramentas e como sacar o repositório.</p>
               </div>
               <a class="pill" href="pages/downloads.html">Abrir</a>
             </div>
@@ -176,12 +163,12 @@
         </section>
 
         <div class="footer">
-          Se quiseres, podes colocar um banner em <code>images/banner.png</code> e inserir aqui no topo.
+          Dica: quando adicionares prints, coloca-os em <code>images/</code> e usa nomes consistentes.
         </div>
       </section>
 
       <div class="footer">
-        <strong>Copyright:</strong> © 2025 José Carlos Alves. Todos os direitos reservados.
+        © 2025 José Carlos Alves. Todos os direitos reservados.
       </div>
     </main>
   </div>
