--- a/pages/issues.html
+++ b/pages/issues.html
@@ -18,14 +18,14 @@
       </div>
     </div>
 
+        <!-- MENU (sem README) -->
     <nav class="nav" id="nav">
       <a href="../index.html"><span>Início</span><span class="pill">Home</span></a>
       <a href="conta.html"><span>Conta & Perfil</span><span class="pill">Setup</span></a>
       <a href="repo.html"><span>Criar repositório</span><span class="pill">Repo</span></a>
-      <a href="upload.html"><span>Upload & organização</span><span class="pill">Files</span></a>
-      <a href="readme.html"><span>README</span><span class="pill">Docs</span></a>
+      <a href="upload.html" class="active"><span>Upload & organização</span><span class="pill">Files</span></a>
       <a href="branches-pr.html"><span>Branches & PR</span><span class="pill">Flow</span></a>
-      <a href="issues.html" class="active"><span>Issues</span><span class="pill">Tasks</span></a>
+      <a href="issues.html"><span>Issues</span><span class="pill">Tasks</span></a>
       <a href="pages.html"><span>GitHub Pages</span><span class="pill">Site</span></a>
       <a href="downloads.html"><span>Downloads & links</span><span class="pill">Links</span></a>
     </nav>
