Melhorias no Index

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <img src="images/avatar.png" class="avatar" alt="José Carlos Alves">
         <div>
           <h1>Guia Interativo — GitHub</h1>
-          <p>Tutorial prático (exemplo: PAP)</p>
+          <p>Manual prático para projetos (exemplo: PAP)</p>
         </div>
       </div>
 
-      <!-- MENU (sem README) -->
+      <!-- MENU -->
       <nav class="nav" id="nav">
         <a href="index.html" class="active"><span>Início</span><span class="pill">Home</span></a>
         <a href="pages/conta.html"><span>Conta & Perfil</span><span class="pill">Setup</span></a>
@@ -49,131 +49,28 @@
     </aside>
 
     <main class="main">
+      <!-- HERO -->
       <header class="hero">
-        <h2>Manual Interativo de GitHub</h2>
+        <h2>Manual Interativo de GitHub para acompanhar uma PAP</h2>
         <p>
-          Guia passo-a-passo para: criar repositórios, organizar ficheiros, trabalhar com branches e pull requests,
-          gerir tarefas com Issues e publicar um site no GitHub Pages.
-          <br/><br/>
-          <strong>Exemplo aplicado:</strong> organização de uma PAP (documentação + evidências + entrega).
+          Este site funciona como um <strong>manual de apoio</strong> para os alunos utilizarem ao longo do desenvolvimento
+          dos seus projetos de <strong>PAP</strong>. A ideia é simples: o repositório GitHub passa a ser o “arquivo oficial”
+          do projeto — com <strong>organização</strong>, <strong>evidências</strong> e <strong>histórico</strong> de trabalho.
         </p>
+
         <div class="meta">
           <span class="tag">🌐 GitHub</span>
           <span class="tag">✅ Passo a passo</span>
-          <span class="tag">🧩 Prints e evidências</span>
-          <span class="tag">🚀 Pages</span>
+          <span class="tag">🧩 Evidências (prints)</span>
+          <span class="tag">🚀 GitHub Pages</span>
         </div>
-      </header>
 
-      <section class="section">
-        <h2>Começar</h2>
-        <p class="subtitle">Escolhe um tópico. Cada página tem passos e sugestões de prints.</p>
-
-        <section class="grid">
-          <div class="card">
-            <div class="head">
-              <div>
-                <h3>Conta & Perfil</h3>
-                <p>Conta, email verificado e perfil pronto.</p>
-              </div>
-              <a class="pill" href="pages/conta.html">Abrir</a>
-            </div>
-            <div class="body">
-              <img src="images/ic_conta.png" alt="" style="max-width:72px; opacity:.9">
-            </div>
+        <!-- BANNER / IMAGEM PRINCIPAL -->
+        <div class="prints" style="margin-top:14px">
+          <div class="ph">
+            <small>Imagem de capa (coloca em <code>images/github.png</code>)</small>
+            <img src="images/github.png" alt="Capa do manual GitHub para projetos de PAP">
           </div>
-
-          <div class="card">
-            <div class="head">
-              <div>
-                <h3>Criar repositório</h3>
-                <p>Nome, visibilidade, configuração inicial.</p>
-              </div>
-              <a class="pill" href="pages/repo.html">Abrir</a>
-            </div>
-            <div class="body">
-              <img src="images/ic_repo.png" alt="" style="max-width:72px; opacity:.9">
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="head">
-              <div>
-                <h3>Upload & organização</h3>
-                <p>Pastas, upload e evidências.</p>
-              </div>
-              <a class="pill" href="pages/upload.html">Abrir</a>
-            </div>
-            <div class="body">
-              <img src="images/ic_upload.png" alt="" style="max-width:72px; opacity:.9">
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="head">
-              <div>
-                <h3>Branches & PR</h3>
-                <p>Trabalhar em segurança e integrar mudanças.</p>
-              </div>
-              <a class="pill" href="pages/branches-pr.html">Abrir</a>
-            </div>
-            <div class="body">
-              <img src="images/ic_branch.png" alt="" style="max-width:72px; opacity:.9">
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="head">
-              <div>
-                <h3>Issues</h3>
-                <p>Tarefas e evidência de progresso.</p>
-              </div>
-              <a class="pill" href="pages/issues.html">Abrir</a>
-            </div>
-            <div class="body">
-              <img src="images/ic_issues.png" alt="" style="max-width:72px; opacity:.9">
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="head">
-              <div>
-                <h3>GitHub Pages</h3>
-                <p>Publicar um site do repositório.</p>
-              </div>
-              <a class="pill" href="pages/pages.html">Abrir</a>
-            </div>
-            <div class="body">
-              <img src="images/ic_pages.png" alt="" style="max-width:72px; opacity:.9">
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="head">
-              <div>
-                <h3>Downloads & links</h3>
-                <p>Ferramentas e como sacar o repositório.</p>
-              </div>
-              <a class="pill" href="pages/downloads.html">Abrir</a>
-            </div>
-            <div class="body">
-              <img src="images/ic_downloads.png" alt="" style="max-width:72px; opacity:.9">
-            </div>
-          </div>
-        </section>
-
-        <div class="footer">
-          Dica: quando adicionares prints, coloca-os em <code>images/</code> e usa nomes consistentes.
         </div>
-      </section>
 
-      <div class="footer">
-        © 2025 José Carlos Alves. Todos os direitos reservados.
-      </div>
-    </main>
-  </div>
-
-  <div class="toast" id="toast">Copiado ✅</div>
-  <script src="js/app.js"></script>
-</body>
-</html>
+       
